2005-06-01  Albert Chu  <chu11@llnl.gov>

	* Various bug fixes and code cleanup.

	* Complete manpage cleanup.
	
	* tagged cerebro-1-0-0-pre2

2005-05-31  Albert Chu  <chu11@llnl.gov>
	
	* Completed Rework.

	* Begin cleaning up manpages.
	
2005-05-30  Albert Chu  <chu11@llnl.gov>
	
	* Continued rework.
	
2005-05-29  Albert Chu  <chu11@llnl.gov>

	* Continued rework.
	
2005-05-28  Albert Chu  <chu11@llnl.gov>

	* tagged pre-libcerebro-rework-1

	* begin libcerebro rework around metric server and metric data.

	* remove all updown server references

	* remove duplicate functions in libcerebro

	* remove unnecessary libcerebro functions

	* rework libcerebro nodelist api
	
2005-05-27  Albert Chu  <chu11@llnl.gov>

	* Continue work on metric server.

	* Bug fixes.
	
2005-05-26  Albert Chu  <chu11@llnl.gov>

	* Continue work on metric server.

	* Various bug fixes.

2005-05-25  Albert Chu  <chu11@llnl.gov>

	* Continue work on metric server.

	* Remove API functions obsoleted by nodelists.
	
2005-05-24  Albert Chu  <chu11@llnl.gov>

	* Minor cleanup and bug fixes.
	
2005-05-23  Albert Chu  <chu11@llnl.gov>

	* Re-org duplicate code into common code.

	* Begin re-org of library to use list interface.
	
2005-05-19  Albert Chu  <chu11@llnl.gov>

	* Rename status to metric due to design and goal differences from
	original ganglia implementation.

	* Rework of node data lists and hashes into one global node data
	list and hash.

	* Added float and double marshalling/unmarshalling functions.

2005-05-18  Albert Chu  <chu11@llnl.gov>

	* Complete status listener.
	
2005-05-17  Albert Chu  <chu11@llnl.gov>

	* Removed unused error codes.

	* Begin status server work.
	
2005-05-17  Albert Chu  <chu11@llnl.gov>

	* cerebro.spec.in: Update chaos build.
	
	* tagged cerebro-1-0-0-pre1
	
2005-05-16  Albert Chu  <chu11@llnl.gov>

	* Typo fixes.

	* Fix libdir path calculation.
	
2005-05-15  Albert Chu  <chu11@llnl.gov>

	* Slight library function names re-wording.
	