@@ -5,6 +5,7 @@ cerebro-1-0-0-pre3
 - allow metric type inconsistency
 - abstract module API
 - variable length metrics and packets
+- nodelist -> datalist?  something
 
 cerebro-1-0-0-pre4
 - monitor new metrics
