@@ -1,3 +1,11 @@
+2005-06-02  Albert Chu  <chu11@llnl.gov>
+
+	* src/modules/cerebro_config_gendersllnl.c: Default 'hostnames' on
+	compute nodes are the alternate nodenames, not primary nodenames.
+
+	* src/cerebrod/cerebrod_node_data.c
+	(_cerebrod_metric_name_list_dump): Fix output bug.
+	
 2005-06-01  Albert Chu  <chu11@llnl.gov>
 
 	* Various bug fixes and code cleanup.
